--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,18 @@
 * {
     box-sizing: border-box;
     outline: none;
+
+    --dark: #48598d;
+    --light: #dcdffa;
+    --medium1: #a0a9ed;
+    --medium2: #8090d6;
+    --medium3: #5266b6;
+    --black: #00054b;
+    --white: #f8f8ff;
+    --side-spacing-desktop: 8vw;
+}
+
+.purple-backup {
     --dark: #81488D;
     --light: #F6DCFA;
     --medium1: #D180E1;
