--- a/frontend/src/pages/Menu/Menu.css
+++ b/frontend/src/pages/Menu/Menu.css
@@ -1,7 +1,11 @@
 .top-bar {
+    position: fixed;
+    z-index: 100000;
+    left: 0;
+    top: 0;
     width: 100vw;
     background-color: var(--dark);
-    padding: 2em 7em;
+    padding: 2em var(--side-spacing-desktop);
     color: var(--white);
 
     display: flex;
@@ -41,7 +45,7 @@
 }
 
 .top-bar .logo a:hover, .top-bar .menu a:hover {
-    opacity: 0.85;
+    opacity: 0.8;
 }
 
 .top-bar .submit {
