--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -114,3 +114,32 @@
     text-align: justify;
     text-align-last: left;
 }
+
+.home-works {
+    padding: 20vh calc(var(--side-spacing-desktop) * 3) 20vh var(--side-spacing-desktop);
+    background-color: var(--black);
+    color: var(--white);
+}
+
+.home-works h1 {
+    margin: 0 0 0.5em 0;
+    padding: 0;
+    font-size: 4em;
+}
+
+.home-works h2 {
+    margin: 0 0 1.5em 0;
+    padding: 0;
+    font-size: 2em;
+    text-align: justify;
+    text-align-last: left;
+}
+
+.home-works a {
+    color: var(--light);
+    text-decoration: underline;
+}
+
+.home-works a:hover {
+    text-decoration: none;
+}
