--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -66,7 +66,7 @@
     width: 25%;
     padding-bottom: 46%;    /* aspect ratio */
 
-    background-image: url("../../assets/phone.png");
+    background-image: url("../../assets/phone2.png");
     background-repeat: no-repeat;
     background-size: contain;
 
@@ -116,7 +116,7 @@
 }
 
 .home-works {
-    padding: 20vh calc(var(--side-spacing-desktop) * 3) 20vh var(--side-spacing-desktop);
+    padding: 20vh calc(var(--side-spacing-desktop) * 3.5) 20vh var(--side-spacing-desktop);
     background-color: var(--black);
     color: var(--white);
 }
