--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,6 +33,15 @@ body {
     background-color: var(--light);
 }
 
+a {
+    color: var(--dark);
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
 .button {
     text-decoration: none !important;
     color: var(--white) !important;
