submit: send and disclaimer

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,12 @@
     --gray: #24242a;
     --white: #f8f8ff;
     --side-spacing-desktop: 8vw;
+
+    --orange: #FF914D;
+    --green: #00BF63;
+    --red: #A81E1E;
+    --purple: #81488D;
+    --blue: #48598D;
 }
 
 .purple-backup {
