submit: styling fixes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,6 +49,9 @@ a:hover {
 }
 
 .button {
+    --webkit-appearance: none !important;  /* fucking safari again */
+    border: none !important;
+    cursor: pointer;
     text-decoration: none !important;
     color: var(--white) !important;
     background-color: var(--medium2);
