--- a/frontend/src/pages/Submit/Submit.css
+++ b/frontend/src/pages/Submit/Submit.css
@@ -4,5 +4,10 @@ form {
 
 .disclaimer {
     font-size: 1.1em;
-    margin: 2em 0 3em 0 !important;
+    margin: 2em 0 !important;
+}
+
+.submit {
+    display: block !important;
+    margin: 0 auto;
 }
