--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,12 +31,17 @@
     --white: #FEF8FF;
 }
 
+html {
+    font-size: calc(0.9vw + 0.6vh);
+}
+
 body {
     margin: 0;
     width: 100vw;
     overflow-x: hidden !important;
     font-family: "Quicksand", "San Francisco", "Segoe UI", "Helvetica", "Roboto", sans-serif;
     background-color: var(--light);
+    font-size: 1rem;
 }
 
 a {
