--- a/frontend/src/components/Message.css
+++ b/frontend/src/components/Message.css
@@ -4,8 +4,8 @@
 
     border-radius: 1em;
     
-    width: 23vw;
-    height: 23vw;
+    width: 100%;
+    padding-bottom: 100%;
 
     margin: 0 auto 8.26% auto;  /* aspect ratio */
 }
