--- a/frontend/src/components/Message.css
+++ b/frontend/src/components/Message.css
@@ -10,6 +10,12 @@
     margin: 0 auto 8.26% auto;  /* aspect ratio */
 }
 
+.message-sender {
+    text-align: left;
+    margin: 0 auto 0.3em auto;
+    font-size: smaller;
+}
+
 .message-text {
     display: block;
     text-align: center !important;
