--- a/frontend/src/components/MessageEditor.css
+++ b/frontend/src/components/MessageEditor.css
@@ -10,7 +10,7 @@
     background: none transparent;
     --webkit-appearance: none;
     font-family: inherit;
-    font-size: inherit;
+    font-size: 1.4em;
     color: inherit;
     display: inline-block;
     vertical-align: middle;
