--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -116,3 +116,23 @@ a:hover {
     margin: 0 0 1.2em 0;
     padding: 0;
 }
+
+/* mobile styles */
+
+@media screen and (max-width: 1023px) {
+    * {
+        --side-spacing-desktop: 3vw;
+    }
+
+    html {
+        font-size: calc(0.5vw + 1.4vh);
+    }
+
+    .sec h1 {
+        font-size: 2em;
+    }
+
+    .sec h2 {
+        font-size: 0.8em;
+    }
+}
