--- a/frontend/src/pages/Submissions/Submissions.css
+++ b/frontend/src/pages/Submissions/Submissions.css
@@ -10,5 +10,13 @@
 
 .submissions-container > div {
     width: calc(33% - 1vw);         /* 3 per row */
-    margin: 0.5vw;
+    margin: 1.5vh 0.5vw;
+}
+
+/* mobile styles */
+
+@media screen and (max-width: 1023px) {
+    .submissions-container > div {
+        width: calc(50% - 1vw);     /* 2 per row */
+    }
 }
