--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -128,6 +128,10 @@ a:hover {
         font-size: calc(0.5vw + 1.4vh);
     }
 
+    .sec {
+        padding: 20vh var(--side-spacing-desktop);
+    }
+
     .sec h1 {
         font-size: 2em;
     }
