update message colors

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,8 +14,8 @@
     --white: #f8f8ff;
     --side-spacing-desktop: 8vw;
 
-    --orange: #FF914D;
-    --green: #00BF63;
+    --orange: #ce5f1a;
+    --green: #008f4a;
     --red: #A81E1E;
     --purple: #81488D;
     --blue: #48598D;
