--- a/frontend/src/pages/Layout/Layout.css
+++ b/frontend/src/pages/Layout/Layout.css
@@ -115,6 +115,7 @@ footer a:hover {
     .menu-button {
         display: inline-block;
         font-size: 1.5em;
+        cursor: pointer;
     }
 
     .top-bar .menu {
