--- a/frontend/src/pages/Layout/Layout.css
+++ b/frontend/src/pages/Layout/Layout.css
@@ -71,7 +71,7 @@
     background-color: var(--medium3);
 }
 
-.open-menu {
+.menu-button {
     display: none;
 }
 
@@ -114,7 +114,7 @@ footer a:hover {
 
     .menu-button {
         display: inline-block;
-        font-size: 1.5em;
+        font-size: 1.8rem;
         cursor: pointer;
     }
 
@@ -152,8 +152,7 @@ footer a:hover {
 
     .close-menu-button {
         position: fixed;
-        top: 2em;
+        top: 1.5em;
         right: calc(var(--side-spacing-desktop) * 3);
-        font-size: inherit !important;
     }
 }
