--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,7 @@
     --medium1: #a0a9ed;
     --medium2: #8090d6;
     --medium3: #5266b6;
+    --medium4: #d8dcff;
     --black: #1b1b1b;
     --gray: #24242a;
     --white: #f8f8ff;
