--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,7 @@
     --medium2: #8090d6;
     --medium3: #5266b6;
     --medium4: #d8dcff;
+    --medium5: #cdd2ff;
     --black: #1b1b1b;
     --gray: #24242a;
     --white: #f8f8ff;
